@@ -15,7 +15,7 @@ import blazed_grating, substacks, planarTE, planarTM, VCSEL, SpE, \
        stack2, degenerate2, grating3, sudbo, polariton2, degenerate3, \
        degenerate4, backward, planar_VCSEL, shift, blochstack, w1reson, \
        surface_plasmon, plasmon_biosensor, backward2, backward3, slab3, \
-       section1, section2
+       section1, section2, section3
 
 alltests = unittest.TestSuite((blazed_grating.suite, substacks.suite, 
        planarTE.suite, planarTM.suite, VCSEL.suite, SpE.suite, fw_bw.suite,
@@ -28,7 +28,7 @@ alltests = unittest.TestSuite((blazed_grating.suite, substacks.suite,
        degenerate3.suite, degenerate4.suite, shift.suite, backward.suite,
        planar_VCSEL.suite, blochstack.suite, w1reson.suite, slab3.suite,
        surface_plasmon.suite, plasmon_biosensor.suite, backward2.suite,
-       backward3.suite, section1.suite, section2.suite ))
+       backward3.suite, section1.suite, section2.suite, section3.suite ))
 
 if __name__ == "__main__":
     r = unittest.TextTestRunner()
